subdir('light')
subdir('dark')
subdir('architec')
subdir('architec-dark')
subdir('baseball')
subdir('baseball-dark')
subdir('bugs')
subdir('bugs-dark')
subdir('cityscap')
subdir('cityscap-dark')
subdir('classic')
subdir('classic-dark')
subdir('dngrcrts')
subdir('dngrcrts-dark')
subdir('explorer')
subdir('explorer-dark')
subdir('fallingl')
subdir('fallingl-dark')
subdir('fashion')
subdir('fashion-dark')
subdir('geometry')
subdir('geometry-dark')
subdir('horror')
subdir('horror-dark')
subdir('horses')
subdir('horses-dark')
subdir('insidepc')
subdir('insidepc-dark')
subdir('jazz')
subdir('jazz-dark')
subdir('jungle')
subdir('jungle-dark')
subdir('ldavinci')
subdir('ldavinci-dark')
subdir('messyrm')
subdir('messyrm-dark')
subdir('mrrdmond')
subdir('mrrdmond-dark')
subdir('mystery')
subdir('mystery-dark')
subdir('nature')
subdir('nature-dark')
subdir('phtgrphy')
subdir('phtgrphy-dark')
subdir('rdmond9x')
subdir('rdmond9x-dark')
subdir('rockroll')
subdir('rockroll-dark')
subdir('science')
subdir('science-dark')
subdir('scifi')
subdir('scifi-dark')
subdir('snowbrd')
subdir('snowbrd-dark')
subdir('space')
subdir('space-dark')
subdir('sports')
subdir('sports-dark')
subdir('the60usa')
subdir('the60usa-dark')
subdir('thgldner')
subdir('thgldner-dark')
subdir('travel')
subdir('travel-dark')
subdir('treehse')
subdir('treehse-dark')
subdir('undrwtr')
subdir('undrwtr-dark')
subdir('wotravel')
subdir('wotravel-dark')
